@@ -37,6 +37,8 @@ limitations under the License.
 	<!-- For modularity you need a directory above the package structure to hold the module.java file -->
 	<property name="openjdk_test_debugging_module" value="test.debugging" />
 	<property name="openjdk_test_debugging_src_dir" value="src/${openjdk_test_debugging_module}" />
+	<property name="openjdk_test_debugging_src_80_110_dir" value="src_80_110/${openjdk_test_debugging_module}" />
+	<property name="openjdk_test_debugging_src_150_dir" value="src_150/${openjdk_test_debugging_module}" />
 	<property name="openjdk_test_debugging_bin_dir" value="bin" />
 
 	<property name="openjdk_test_debugging_jdi_jar_file" value="${openjdk_test_debugging_bin_dir}/JdiTests.jar" />
@@ -119,7 +121,8 @@ limitations under the License.
 			   encoding="${src-encoding}"
 			   includeantruntime="false"
 			   failonerror="true">
-			<include name="**/*.java"/>
+			<src path="${openjdk_test_debugging_src_dir}" />
+			<src path="${openjdk_test_debugging_src_80_110_dir}" />
 		</javac>
 	</target>
 	
@@ -136,20 +139,45 @@ limitations under the License.
 			<include name="**/*.java"/>
 		</depend>
 		-->
-		<javac srcdir="${openjdk_test_debugging_src_dir}"
-			   destdir="${openjdk_test_debugging_bin_dir}"
-			   fork="true"
-			   executable="${java_compiler}"
-			   debug="true"
-			   classpathref="project.class.path"
-			   encoding="${src-encoding}"
-			   includeantruntime="false"
-			   failonerror="true">
-			<compilerarg value="-source"/>
-			<compilerarg value="${java.specification.version}"/>
-			<compilerarg value="--enable-preview"/>
-			<include name="**/*.java"/>
-		</javac>
+		<if>
+			<equals arg1="${JDK_VERSION}" arg2="11"/>
+			<then>
+				<javac srcdir="${openjdk_test_debugging_src_dir}"
+					destdir="${openjdk_test_debugging_bin_dir}"
+					fork="true"
+					executable="${java_compiler}"
+					debug="true"
+					classpathref="project.class.path"
+					encoding="${src-encoding}"
+					includeantruntime="false"
+					failonerror="true">
+					<src path="${openjdk_test_debugging_src_dir}" />
+					<src path="${openjdk_test_debugging_src_80_110_dir}" />
+					<compilerarg value="-source"/>
+					<compilerarg value="${java.specification.version}"/>
+					<compilerarg value="--enable-preview"/>
+				</javac>
+			</then>
+			<else>
+				<property name="addExports" value="--add-exports java.base/jdk.internal.org.objectweb.asm=ALL-UNNAMED" />
+				<javac srcdir="${openjdk_test_debugging_src_dir}"
+					destdir="${openjdk_test_debugging_bin_dir}"
+					fork="true"
+					executable="${java_compiler}"
+					debug="true"
+					classpathref="project.class.path"
+					encoding="${src-encoding}"
+					includeantruntime="false"
+					failonerror="true">
+					<src path="${openjdk_test_debugging_src_dir}" />
+					<src path="${openjdk_test_debugging_src_150_dir}" />
+					<compilerarg value="-source"/>
+					<compilerarg value="${java.specification.version}"/>
+					<compilerarg value="--enable-preview"/>
+					<compilerarg line='${addExports}' />
+				</javac>
+			</else>
+		</if>
 	</target>
 	
 	<target name="create-bin-dir">
